@@ -237,7 +237,7 @@ class SimilarChecker(BaseChecker, Similar):
                 ),
                )
     # reports
-    reports = ( ('R0801', 'Duplication', report_similarities), ) # XXX actually a Refactoring message
+    reports = ( ('RP0801', 'Duplication', report_similarities), )
 
     def __init__(self, linter=None):
         BaseChecker.__init__(self, linter)
