@@ -17,6 +17,8 @@ ChangeLog for PyLint
     * #103656: fix W0231 false positive for missing call to object.__init__
       (patch by lothiraldan@gmail.com)
 
+    * #63424: fix similarity report disabling by properly renaming it to RP0801
+
     * #103949: create a console_scripts entry point to be used by
       easy_install, buildout and pip
 
@@ -24,6 +26,7 @@ ChangeLog for PyLint
 
     * stop including tests files in distribution, they causes crash when
       installed with python3 (#72022, #82417, #76910)
+
 
 2012-07-17  --  0.25.2
     * #93591: Correctly emit warnings about clobbered variable names when an
@@ -53,7 +56,6 @@ ChangeLog for PyLint
       when using a regexp value set
 
     * fix potential crashes with utils.safe_infer raising InferenceError
-
 
 
 2011-12-08  --  0.25.1
